--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ https://www.tooplate.com/view/2121-wave-cafe
 			
 			
           <nav class="tm-site-nav">
+			  		<img src="img/logodrip.png" alt="Customflag" class="center">
 							      <img src="img/LOGOCIRCLE.png" alt="Paris" class="center"> 
 			    <audio controls autoplay loop>
   <source src="audio/sombodysgetin.mp3" type="audio/ogg">
