--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@ https://www.tooplate.com/view/2121-wave-cafe
       <!-- Site Header -->
 		
       <div class="tm-left">
-	<img src="img/logodrip.png" alt="CUSTOMFLAG" class="center">
+	<img src="img/LOGODRIP.png" alt="CUSTOMFLAG" class="center">
 		         	   
 		  		
         <div class="tm-left-inner">
-			<img src="img/logodrip.png" alt="CUSTOMFLAG" class="center">
+
 		
           <div class="tm-site-header">
 
@@ -33,7 +33,7 @@ https://www.tooplate.com/view/2121-wave-cafe
 			
 			
           <nav class="tm-site-nav">
-			  		<img src="img/logodrip.png" alt="Customflag" class="center">
+		
 							      <img src="img/LOGOCIRCLE.png" alt="Paris" class="center"> 
 			    <audio controls autoplay loop>
   <source src="audio/sombodysgetin.mp3" type="audio/ogg">
@@ -143,7 +143,7 @@ Your browser does not support the audio element.
                   </div>
                 </div> 
                                                 <div class="tm-list-item">          
-                  <img src="img/POKEBURGERTHUMB.JPG" alt="Image" class="tm-list-item-img">
+                  <img src="img/POKEBURGERTHUMB.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <h3 class="tm-list-item-name">CHILDRENS TOYS POKEBURGER T SHIRT<span class="tm-list-item-price">$30.00</span></h3>
                     <p class="tm-list-item-description">Microplastic toys that look like smiling cows? Lets be more honest when we advertise how about that, mcdickface.</p>
