--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Your browser does not support the audio element.
                 </div> 
 				  
 				    <div class="tm-list-item">          
-                  <img src="img/POLBSTHUM.JPG" alt="Image" class="tm-list-item-img">
+                  <img src="img/POLBSTHUM.jpg" alt="Image" class="tm-list-item-img">
                   <div class="tm-black-bg tm-list-item-text">
                     <h3 class="tm-list-item-name">Political Bullshit T-shirt<span class="tm-list-item-price">$30.00</span></h3>
                     <p class="tm-list-item-description">Be your own president.</p>
